--- a/MicroManager/Views/Shared/_Layout.cshtml
+++ b/MicroManager/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Supplier" asp-action="SupplierIndex">Supplier</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CustomerType" asp-action="CusTypeIndex">Customer Type</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" /> @* ********DON'T TOUCH THIS**************' *@
                 </div>
