--- a/MicroManager/Views/Cart/Create.cshtml
+++ b/MicroManager/Views/Cart/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MicroManager.Models.Product
+﻿@model MicroManager.Models.Cart
 
 @{
     ViewData["Title"] = "Create";
@@ -7,24 +7,30 @@
 
 <h1>Create</h1>
 
-<h4>Product</h4>
+<h4>Cart</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="CropId" class="control-label"></label>
-                <select asp-for="CropId" class ="form-control" asp-items="ViewBag.CropId"></select>
+                <label asp-for="ProductId" class="control-label"></label>
+                <select asp-for="ProductId" class ="form-control" asp-items="ViewBag.ProductId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="ProductSizeId" class="control-label"></label>
-                <select asp-for="ProductSizeId" class ="form-control" asp-items="ViewBag.ProductSizeId"></select>
+                <label asp-for="DateCreated" class="control-label"></label>
+                <input asp-for="DateCreated" class="form-control" />
+                <span asp-validation-for="DateCreated" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Weight" class="control-label"></label>
-                <input asp-for="Weight" class="form-control" />
-                <span asp-validation-for="Weight" class="text-danger"></span>
+                <label asp-for="CustomerId" class="control-label"></label>
+                <input asp-for="CustomerId" class="form-control" />
+                <span asp-validation-for="CustomerId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Quantity" class="control-label"></label>
+                <input asp-for="Quantity" class="form-control" />
+                <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
