--- a/MicroManager/Views/Cart/Index.cshtml
+++ b/MicroManager/Views/Cart/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MicroManager.Models.Order>
+﻿@model IEnumerable<MicroManager.Models.Cart>
 
 @{
     ViewData["Title"] = "Index";
@@ -14,7 +14,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.OrderDate)
+                @Html.DisplayNameFor(model => model.DateCreated)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CustomerId)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Quantity)
@@ -23,13 +26,7 @@
                 @Html.DisplayNameFor(model => model.Price)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Total)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Product)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Customer)
             </th>
             <th></th>
         </tr>
@@ -38,7 +35,10 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.OrderDate)
+                @Html.DisplayFor(modelItem => item.DateCreated)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CustomerId)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Quantity)
@@ -46,19 +46,13 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Total)
-                </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Product.ProductId)
             </td>
             <td>
-                    @Html.DisplayFor(modelItem => item.Customer.CompanyName)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.OrderId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.OrderId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.OrderId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.CartId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.CartId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.CartId">Delete</a>
             </td>
         </tr>
 }
