--- a/MicroManager/Views/OrderDetail/Create.cshtml
+++ b/MicroManager/Views/OrderDetail/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MicroManager.Models.Product
+﻿@model MicroManager.Models.OrderDetail
 
 @{
     ViewData["Title"] = "Create";
@@ -7,24 +7,25 @@
 
 <h1>Create</h1>
 
-<h4>Product</h4>
+<h4>OrderDetail</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="CropId" class="control-label"></label>
-                <select asp-for="CropId" class ="form-control" asp-items="ViewBag.CropId"></select>
+                <label asp-for="ProductId" class="control-label"></label>
+                <input asp-for="ProductId" class="form-control" />
+                <span asp-validation-for="ProductId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProductSizeId" class="control-label"></label>
-                <select asp-for="ProductSizeId" class ="form-control" asp-items="ViewBag.ProductSizeId"></select>
+                <label asp-for="OrderId" class="control-label"></label>
+                <select asp-for="OrderId" class ="form-control" asp-items="ViewBag.OrderId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="Weight" class="control-label"></label>
-                <input asp-for="Weight" class="form-control" />
-                <span asp-validation-for="Weight" class="text-danger"></span>
+                <label asp-for="Quantity" class="control-label"></label>
+                <input asp-for="Quantity" class="form-control" />
+                <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
