--- a/MicroManager/Views/Product/Delete.cshtml
+++ b/MicroManager/Views/Product/Delete.cshtml
@@ -13,10 +13,10 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.Weight)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
+            @Html.DisplayFor(model => model.Weight)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Price)
@@ -25,10 +25,16 @@
             @Html.DisplayFor(model => model.Price)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Crop)
+            @Html.DisplayNameFor(model => model.ProductSize)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Crop.CropId)
+            @Html.DisplayFor(model => model.ProductSize.ProductSizeId)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Crops)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Crops.CropId)
         </dd>
     </dl>
     
