--- a/MicroManager/Views/Customer/Delete.cshtml
+++ b/MicroManager/Views/Customer/Delete.cshtml
@@ -64,7 +64,7 @@
             @Html.DisplayNameFor(model => model.CustomerType)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CustomerType.CustomerTypeId)
+            @Html.DisplayFor(model => model.CustomerType.Id)
         </dd>
     </dl>
     
