--- a/MicroManager/Views/Customer/Index.cshtml
+++ b/MicroManager/Views/Customer/Index.cshtml
@@ -71,7 +71,7 @@
                 @Html.DisplayFor(modelItem => item.Country)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CustomerType.CustomerTypeId)
+                @Html.DisplayFor(modelItem => item.CustomerType.Type)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.CustomerId">Edit</a> |
