--- a/MicroManager/Views/CustomerType/Index.cshtml
+++ b/MicroManager/Views/CustomerType/Index.cshtml
@@ -5,10 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create Cutomer Type</h1>
+<h1>Index</h1>
 
 <p>
-    <a asp-action="Create"class="btn btn-primary">Create New</a>
+    <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -26,9 +26,9 @@
                 @Html.DisplayFor(modelItem => item.Type)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.CustomerTypeId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CustomerTypeId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CustomerTypeId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
