--- a/MicroManager/Views/Shared/_Layout.cshtml
+++ b/MicroManager/Views/Shared/_Layout.cshtml
@@ -49,6 +49,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="Index">Cart</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Package" asp-action="Index">Package</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" /> @* ********DON'T TOUCH THIS**************' *@
                 </div>
