--- a/MicroManager/Views/Shared/_Layout.cshtml
+++ b/MicroManager/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Package" asp-action="PackageIndex">Package</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Shelving" asp-action="ShelvingIndex">Shelving</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Shelving" asp-action="Index">Shelving</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" /> @* ********DON'T TOUCH THIS**************' *@
