--- a/MicroManager/Views/Shared/_Layout.cshtml
+++ b/MicroManager/Views/Shared/_Layout.cshtml
@@ -55,6 +55,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Shelving" asp-action="Index">Shelving</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Light" asp-action="Index">Grow Lights</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" /> @* ********DON'T TOUCH THIS**************' *@
                 </div>
