--- a/MicroManager/Views/GrowMediaType/Index.cshtml
+++ b/MicroManager/Views/GrowMediaType/Index.cshtml
@@ -1,15 +1,14 @@
-﻿@model IEnumerable<MicroManager.Models.CustomerType>
-
+﻿@model IEnumerable<MicroManager.Models.GrowMediaType>
 
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Add the Type of Customer</h1>
+<h1>Index</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-primary">Create New</a>
+    <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -27,9 +26,9 @@
                 @Html.DisplayFor(modelItem => item.Type)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.GMTypeId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.GMTypeId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.GMTypeId">Delete</a>
             </td>
         </tr>
 }
