--- a/MicroManager/Views/GrowMedia/Index.cshtml
+++ b/MicroManager/Views/GrowMedia/Index.cshtml
@@ -1,84 +1,97 @@
-﻿@model IEnumerable<MicroManager.Models.GrowMedia>
+﻿@model MicroManager.Controllers.GrowMediaController.GrowMediaViewModel //Changed to do calcs on screen
 
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Grow Media Purchased</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">New Purchase</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.GMTypeId)
+                Date
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Date)
+                Type
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Type)
+                Volume = CF
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Volume)
+                Order Qty
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.OrderQty)
+                Price
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Price)
+                Tax
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Tax)
+                Total Price
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.GrowMediaType)
+                Total Qty - CF
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Supplier)
+                Supplier
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.GMTypeId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Type)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Volume)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderQty)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Tax)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.GrowMediaType.GMTypeId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Supplier.SupplierId)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.GrowMediaId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.GrowMediaId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.GrowMediaId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.GrowMedias)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Date)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Type)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Volume)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OrderQty)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Price)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Tax)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TotalPrice)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TotalMediaQty)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Supplier.CompanyName)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.GrowMediaId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.GrowMediaId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.GrowMediaId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+Potting Soil Total @string.Format("${0:0.##}", (double)Model.PottingSoilTotal)
+Potting Soil Total Qty @string.Format("{0:0.##}", (double)Model.TotalVolume)
+
+    Coca Total @string.Format("${0:0.##}", (double)Model.CocaTotal)
+    Coca Total Qty @string.Format("{0:0.##}", (double)Model.TotalVolume)
+
+    Sand Total @string.Format("${0:0.##}", (double)Model.SandTotal)
+    Sand Total Qty @string.Format("{0:0.##}", (double)Model.TotalVolume)
+
+    Paper Towel Total @string.Format("${0:0.##}", (double)Model.PaperTowelTotal)
+    Paper Towel Total Qty @string.Format("{0:0.##}", (double)Model.TotalVolume)
