--- a/MicroManager/Views/GrowMedia/Create.cshtml
+++ b/MicroManager/Views/GrowMedia/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model MicroManager.Models.GrowMedia
+﻿@using MicroManager.Enums
+@model MicroManager.Models.GrowMedia
 
 @{
     ViewData["Title"] = "Create";
@@ -23,9 +24,12 @@
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Type" class="control-label"></label>
-                <input asp-for="Type" class="form-control" />
-                <span asp-validation-for="Type" class="text-danger"></span>
+                 <label asp-for="Type" class="control-label"></label>
+                @* <span asp-validation-for="Type" class="text-danger"></span>  *@
+                
+                <select class="form-control" asp-items="@Html.GetEnumSelectList<GrowMediaTypesEnum>()">
+                    <option value="">-- Select Grow Media Type --</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="Volume" class="control-label"></label>
