--- a/MicroManager/Views/Customer/Details.cshtml
+++ b/MicroManager/Views/Customer/Details.cshtml
@@ -59,11 +59,17 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Country)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Phone)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Phone)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CustomerType)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CustomerType.Id)
+            @Html.DisplayFor(model => model.CustomerType.Type)
         </dd>
     </dl>
 </div>
