--- a/MicroManager/Views/Employee/Delete.cshtml
+++ b/MicroManager/Views/Employee/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model MicroManager.Models.Supplier
+﻿@model MicroManager.Models.Employee
 
 @{
     ViewData["Title"] = "Delete";
@@ -9,14 +9,14 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Supplier</h4>
+    <h4>Employee</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CompanyName)
+            @Html.DisplayNameFor(model => model.EmployeeNumber)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CompanyName)
+            @Html.DisplayFor(model => model.EmployeeNumber)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FirstName)
@@ -29,12 +29,6 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.LastName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Address)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Address)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.City)
@@ -67,21 +61,21 @@
             @Html.DisplayFor(model => model.Phone)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.email)
+            @Html.DisplayNameFor(model => model.EMail)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.email)
+            @Html.DisplayFor(model => model.EMail)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.URL)
+            @Html.DisplayNameFor(model => model.Roles)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.URL)
+            @Html.DisplayFor(model => model.Roles.RoleId)
         </dd>
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="SupplierId" />
+        <input type="hidden" asp-for="EmployeeId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
