--- a/MicroManager/Views/Light/Details.cshtml
+++ b/MicroManager/Views/Light/Details.cshtml
@@ -45,7 +45,7 @@
             @Html.DisplayNameFor(model => model.Supplier)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Supplier.SupplierId)
+            @Html.DisplayFor(model => model.Supplier.CompanyName)
         </dd>
     </dl>
 </div>
