--- a/MicroManager/Views/Light/Edit.cshtml
+++ b/MicroManager/Views/Light/Edit.cshtml
@@ -15,9 +15,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="LightId" />
             <div class="form-group">
-                <label asp-for="SupplierId" class="control-label"></label>
-                <select asp-for="SupplierId" class="form-control" asp-items="ViewBag.SupplierId"></select>
-                <span asp-validation-for="SupplierId" class="text-danger"></span>
+                <label asp-for="Supplier_Id" class="control-label"></label>
+                <select asp-for="Supplier_Id" class="form-control" asp-items="ViewBag.SupplierId"></select>
+                <span asp-validation-for="Supplier_Id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DateCreated" class="control-label"></label>
