--- a/MicroManager/Views/Package/Create.cshtml
+++ b/MicroManager/Views/Package/Create.cshtml
@@ -5,17 +5,17 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<h1>Create Package Type</h1>
 
-<h4>Package</h4>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="SupplierId" class="control-label"></label>
-                <select asp-for="SupplierId" class ="form-control" asp-items="ViewBag.SupplierId"></select>
+                <label asp-for="Supplier_Id" class="control-label"></label>
+                <select asp-for="Supplier_Id" class="form-control" asp-items="ViewBag.SupplierId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
