--- a/MicroManager/Views/Supplier/Details.cshtml
+++ b/MicroManager/Views/Supplier/Details.cshtml
@@ -59,6 +59,24 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Country)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Phone)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Phone)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.email)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.email)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.URL)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.URL)
+        </dd>
     </dl>
 </div>
 <div>
