Added Trays to Views

--- a/MicroManager/Views/Product/Edit.cshtml
+++ b/MicroManager/Views/Product/Edit.cshtml
@@ -15,14 +15,14 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ProductId" />
             <div class="form-group">
-                <label asp-for="CropId" class="control-label"></label>
-                <select asp-for="CropId" class="form-control" asp-items="ViewBag.CropId"></select>
-                <span asp-validation-for="CropId" class="text-danger"></span>
+                <label asp-for="Crop_Id" class="control-label"></label>
+                <select asp-for="Crop_Id" class="form-control" asp-items="ViewBag.CropId"></select>
+                <span asp-validation-for="Crop_Id" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProductSizeId" class="control-label"></label>
-                <select asp-for="ProductSizeId" class="form-control" asp-items="ViewBag.ProductSizeId"></select>
-                <span asp-validation-for="ProductSizeId" class="text-danger"></span>
+                <label asp-for="ProductSize_Id" class="control-label"></label>
+                <select asp-for="ProductSize_Id" class="form-control" asp-items="ViewBag.ProductSizeId"></select>
+                <span asp-validation-for="ProductSize_Id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Weight" class="control-label"></label>
