--- a/MicroManager/Views/Light/Details.cshtml
+++ b/MicroManager/Views/Light/Details.cshtml
@@ -41,6 +41,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Tax)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Total)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Total)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Supplier)
         </dt>
