--- a/MicroManager/Views/Light/Index.cshtml
+++ b/MicroManager/Views/Light/Index.cshtml
@@ -29,38 +29,45 @@
                 @Html.DisplayNameFor(model => model.Tax)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Total)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Supplier)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.DateCreated)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Type)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderQty)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Tax)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Supplier.CompanyName)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.LightId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.LightId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.LightId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateCreated)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Type)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OrderQty)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Price)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Tax)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Total)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Supplier.CompanyName)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.LightId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.LightId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.LightId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
