--- a/MicroManager/Views/Product/Create.cshtml
+++ b/MicroManager/Views/Product/Create.cshtml
@@ -14,12 +14,12 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="CropId" class="control-label"></label>
-                <select asp-for="CropId" class ="form-control" asp-items="ViewBag.CropId"></select>
+                <label asp-for="Crop_Id" class="control-label"></label>
+                <select asp-for="Crop_Id" class="form-control" asp-items="ViewBag.CropId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="ProductSizeId" class="control-label"></label>
-                <select asp-for="ProductSizeId" class ="form-control" asp-items="ViewBag.ProductSizeId"></select>
+                <label asp-for="ProductSize_Id" class="control-label"></label>
+                <select asp-for="ProductSize_Id" class="form-control" asp-items="ViewBag.ProductSizeId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Weight" class="control-label"></label>
