--- a/MicroManager/Views/Shared/_Layout.cshtml
+++ b/MicroManager/Views/Shared/_Layout.cshtml
@@ -22,9 +22,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Products</a>
-                        </li>
+                        
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="Index">Orders</a>
                         </li>
@@ -34,52 +32,86 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Supplier" asp-action="Index">Supplier</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Index">Customer</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="CustomerType" asp-action="Index">Customer Type</a>
-                        </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="OrderDetail" asp-action="Index">Order Details</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ProductSize" asp-action="Index">Product Size</a>
-                        </li>
+                       
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="Index">Cart</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Package" asp-action="PackageIndex">Package</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Shelving" asp-action="Index">Shelving</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Light" asp-action="Index">Grow Lights</a>
-                        </li>
-                        
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="GrowMedia" asp-action="Index">Grow Media</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Employees</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="Index">Employee Roles</a>
-                        </li>
-                        
-                        
-                    </ul>
-                    <partial name="_LoginPartial" /> @* ********DON'T TOUCH THIS**************' *@
-                    <div class="p-2 border rounded">
-                        <div class="form-check form-switch" id="btnSwitch">
-                            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                            <label class="form-check-label" for="flexSwitchCheckDefault">Mode</label>
+
+                        <div class="collapse navbar-collapse">
+                            <ul class="navbar-nav">
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Products
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                        <li >
+                                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Products</a>
+                                        </li>
+                                        <li >
+                                            <a class="nav-link text-dark" asp-area="" asp-controller="ProductSize" asp-action="Index">Product Size</a>
+                                        </li>
+                                    </ul>
                         </div>
+
+
+                        <div class="collapse navbar-collapse">
+                            <ul class="navbar-nav">
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Customers
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                        <li><a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Index">Customer</a></li>
+                                        <li><a class="nav-link text-dark" asp-area="" asp-controller="CustomerType" asp-action="Index">Customer Type</a></li>
+                                    </ul>
+                        </div>
+
+                        <div class="collapse navbar-collapse">
+                            <ul class="navbar-nav">
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Inventory
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                        <li><a class="nav-link text-dark" asp-area="" asp-controller="Package" asp-action="PackageIndex">Package</a></li>
+                                        <li><a class="nav-link text-dark" asp-area="" asp-controller="Shelving" asp-action="Index">Shelving</a></li>
+                                        <li><a class="nav-link text-dark" asp-area="" asp-controller="GrowMedia" asp-action="Index">Grow Media</a></li>
+                                        <li><a class="nav-link text-dark" asp-area="" asp-controller="Light" asp-action="Index">Grow Lights</a></li>
+                                        <li><a class="nav-link text-dark" asp-area="" asp-controller="Tray" asp-action="Index">Trays</a></li>
+                                    </ul>
+                        </div>
+                        <div class="collapse navbar-collapse">
+                            <ul class="navbar-nav">
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Employees
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                        <li class="nav-item">
+                                            <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Employees</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="Index">Employee Roles</a>
+                                        </li>
+
+                                    </ul>
+
+                            </ul>
+                        </div>
+                </div>
+                <partial name="_LoginPartial" /> @* ********DON'T TOUCH THIS**************' *@
+                <div class="p-2 border rounded">
+                    <div class="form-check form-switch" id="btnSwitch">
+                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                        <label class="form-check-label" for="flexSwitchCheckDefault">Mode</label>
                     </div>
                 </div>
             </div>
+            </>
         </nav>
     </header>
     <div class="container">
