--- a/MicroManager/Views/Tray/Create.cshtml
+++ b/MicroManager/Views/Tray/Create.cshtml
@@ -1,28 +1,26 @@
-﻿@model MicroManager.Models.Light
+﻿@model MicroManager.Models.Tray
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<h1>Create</h1>
 
-<h4>Light</h4>
+<h4>Tray</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="LightId" />
             <div class="form-group">
                 <label asp-for="Supplier_Id" class="control-label"></label>
-                <select asp-for="Supplier_Id" class="form-control" asp-items="ViewBag.SupplierId"></select>
-                <span asp-validation-for="Supplier_Id" class="text-danger"></span>
+                <select asp-for="Supplier_Id" class ="form-control" asp-items="ViewBag.Supplier_Id"></select>
             </div>
             <div class="form-group">
-                <label asp-for="DateCreated" class="control-label"></label>
-                <input asp-for="DateCreated" class="form-control" />
-                <span asp-validation-for="DateCreated" class="text-danger"></span>
+                <label asp-for="Date" class="control-label"></label>
+                <input asp-for="Date" class="form-control" />
+                <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
@@ -30,10 +28,16 @@
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="OrderQty" class="control-label"></label>
-                <input asp-for="OrderQty" class="form-control" />
-                <span asp-validation-for="OrderQty" class="text-danger"></span>
+                <label asp-for="Qty" class="control-label"></label>
+                <input asp-for="Qty" class="form-control" />
+                <span asp-validation-for="Qty" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Qty_pack" class="control-label"></label>
+                <input asp-for="Qty_pack" class="form-control" />
+                <span asp-validation-for="Qty_pack" class="text-danger"></span>
+            </div>
+            
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
                 <input asp-for="Price" class="form-control" />
@@ -45,12 +49,7 @@
                 <span asp-validation-for="Tax" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Total" class="control-label"></label>
-                <input asp-for="Total" class="form-control" />
-                <span asp-validation-for="Total" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
