--- a/MicroManager/Views/Tray/Delete.cshtml
+++ b/MicroManager/Views/Tray/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model MicroManager.Models.Light
+﻿@model MicroManager.Models.Tray
 
 @{
     ViewData["Title"] = "Delete";
@@ -9,14 +9,14 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Light</h4>
+    <h4>Tray</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateCreated)
+            @Html.DisplayNameFor(model => model.Date)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateCreated)
+            @Html.DisplayFor(model => model.Date)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Type)
@@ -25,11 +25,18 @@
             @Html.DisplayFor(model => model.Type)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OrderQty)
+            @Html.DisplayNameFor(model => model.Qty)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OrderQty)
+            @Html.DisplayFor(model => model.Qty)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Qty_pack)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Qty_pack)
+        </dd>
+        
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Price)
         </dt>
@@ -42,22 +49,16 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Tax)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Total)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Total)
-        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Supplier)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Supplier.CompanyName)
+            @Html.DisplayFor(model => model.Supplier.email)
         </dd>
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="LightId" />
+        <input type="hidden" asp-for="TrayId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
