--- a/MicroManager/Views/Tray/Details.cshtml
+++ b/MicroManager/Views/Tray/Details.cshtml
@@ -1,22 +1,21 @@
-﻿@model MicroManager.Models.Light
+﻿@model MicroManager.Models.Tray
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
+<h1>Details</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Light</h4>
+    <h4>Tray</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateCreated)
+            @Html.DisplayNameFor(model => model.Date)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateCreated)
+            @Html.DisplayFor(model => model.Date)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Type)
@@ -25,11 +24,18 @@
             @Html.DisplayFor(model => model.Type)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OrderQty)
+            @Html.DisplayNameFor(model => model.Qty)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OrderQty)
+            @Html.DisplayFor(model => model.Qty)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Qty_pack)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Qty_pack)
+        </dd>
+        
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Price)
         </dt>
@@ -42,23 +48,15 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Tax)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Total)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Total)
-        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Supplier)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Supplier.CompanyName)
+            @Html.DisplayFor(model => model.Supplier.email)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="LightId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+</div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model?.TrayId">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
