--- a/MicroManager/Views/Tray/Edit.cshtml
+++ b/MicroManager/Views/Tray/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MicroManager.Models.Light
+﻿@model MicroManager.Models.Tray
 
 @{
     ViewData["Title"] = "Edit";
@@ -7,22 +7,22 @@
 
 <h1>Edit</h1>
 
-<h4>Light</h4>
+<h4>Tray</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="LightId" />
+            <input type="hidden" asp-for="TrayId" />
             <div class="form-group">
                 <label asp-for="Supplier_Id" class="control-label"></label>
-                <select asp-for="Supplier_Id" class="form-control" asp-items="ViewBag.SupplierId"></select>
+                <select asp-for="Supplier_Id" class="form-control" asp-items="ViewBag.Supplier_Id"></select>
                 <span asp-validation-for="Supplier_Id" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DateCreated" class="control-label"></label>
-                <input asp-for="DateCreated" class="form-control" />
-                <span asp-validation-for="DateCreated" class="text-danger"></span>
+                <label asp-for="Date" class="control-label"></label>
+                <input asp-for="Date" class="form-control" />
+                <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
@@ -30,10 +30,16 @@
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="OrderQty" class="control-label"></label>
-                <input asp-for="OrderQty" class="form-control" />
-                <span asp-validation-for="OrderQty" class="text-danger"></span>
+                <label asp-for="Qty" class="control-label"></label>
+                <input asp-for="Qty" class="form-control" />
+                <span asp-validation-for="Qty" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Qty_pack" class="control-label"></label>
+                <input asp-for="Qty_pack" class="form-control" />
+                <span asp-validation-for="Qty_pack" class="text-danger"></span>
+            </div>
+           
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
                 <input asp-for="Price" class="form-control" />
@@ -43,11 +49,6 @@
                 <label asp-for="Tax" class="control-label"></label>
                 <input asp-for="Tax" class="form-control" />
                 <span asp-validation-for="Tax" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Total" class="control-label"></label>
-                <input asp-for="Total" class="form-control" />
-                <span asp-validation-for="Total" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
