--- a/MicroManager/Views/Package/Create.cshtml
+++ b/MicroManager/Views/Package/Create.cshtml
@@ -27,6 +27,10 @@
                 <input asp-for="PackageType" class="form-control" />
                 <span asp-validation-for="PackageType" class="text-danger"></span>
             </div>
+             <div class="form-group">
+                <label asp-for="ProductSize_Id" class="control-label"></label>
+                <select asp-for="ProductSize_Id" class="form-control" asp-items="ViewBag.ProductSizeId"></select>
+            </div> 
             <div class="form-group">
                 <label asp-for="PackSize" class="control-label"></label>
                 <input asp-for="PackSize" class="form-control" />
@@ -37,6 +41,7 @@
                 <input asp-for="OrderQty" class="form-control" />
                 <span asp-validation-for="OrderQty" class="text-danger"></span>
             </div>
+            
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
                 <input asp-for="Price" class="form-control" />
