--- a/MicroManager/Views/Product/Create.cshtml
+++ b/MicroManager/Views/Product/Create.cshtml
@@ -14,8 +14,8 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Crop_Id" class="control-label"></label>
-                <select asp-for="Crop_Id" class="form-control" asp-items="ViewBag.CropId"></select>
+                <label asp-for="Seed_Id" class="control-label"></label>
+                <select asp-for="Seed_Id" class="form-control" asp-items="ViewBag.SeedId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="ProductSize_Id" class="control-label"></label>
