--- a/MicroManager/Views/Product/Details.cshtml
+++ b/MicroManager/Views/Product/Details.cshtml
@@ -30,10 +30,10 @@
             @Html.DisplayFor(model => model.ProductSize.ProductSizeId)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Crops)
+            @Html.DisplayNameFor(model => model.Seeds)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Crops.CropId)
+            @Html.DisplayFor(model => model.Seeds.SeedId)
         </dd>
     </dl>
 </div>
