--- a/MicroManager/Views/Product/Index.cshtml
+++ b/MicroManager/Views/Product/Index.cshtml
@@ -23,7 +23,7 @@
                 @Html.DisplayNameFor(model => model.ProductSize)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Crops)
+                @Html.DisplayNameFor(model => model.Seeds)
             </th>
             <th></th>
         </tr>
@@ -41,7 +41,7 @@
                 @Html.DisplayFor(modelItem => item.ProductSize.Size)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Crops.Name)
+                    @Html.DisplayFor(modelItem => item.Seeds.Type)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ProductId">Edit</a> |
