--- a/MicroManager/Views/Package/Create.cshtml
+++ b/MicroManager/Views/Package/Create.cshtml
@@ -22,14 +22,10 @@
                 <input asp-for="Date" class="form-control" />
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="PackageType" class="control-label"></label>
-                <input asp-for="PackageType" class="form-control" />
-                <span asp-validation-for="PackageType" class="text-danger"></span>
-            </div>
+           
              <div class="form-group">
-                <label asp-for="ProductSize_Id" class="control-label"></label>
-                <select asp-for="ProductSize_Id" class="form-control" asp-items="ViewBag.ProductSizeId"></select>
+                <label asp-for="Package_ProductSize_Id" class="control-label"></label>
+                <select asp-for="Package_ProductSize_Id" class="form-control" asp-items="ViewBag.ProductSizeId"></select>
             </div> 
             <div class="form-group">
                 <label asp-for="PackSize" class="control-label"></label>
