--- a/MicroManager/Views/Product/Create.cshtml
+++ b/MicroManager/Views/Product/Create.cshtml
@@ -18,8 +18,8 @@
                 <select asp-for="Seed_Id" class="form-control" asp-items="ViewBag.SeedId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="ProductSize_Id" class="control-label"></label>
-                <select asp-for="ProductSize_Id" class="form-control" asp-items="ViewBag.ProductSizeId"></select>
+                <label asp-for="Product_ProductSize_Id" class="control-label"></label>
+                <select asp-for="Product_ProductSize_Id" class="form-control" asp-items="ViewBag.ProductSizeId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Weight" class="control-label"></label>
