--- a/MicroManager/Views/Product/Edit.cshtml
+++ b/MicroManager/Views/Product/Edit.cshtml
@@ -20,9 +20,9 @@
                 <span asp-validation-for="Seed_Id" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProductSize_Id" class="control-label"></label>
-                <select asp-for="ProductSize_Id" class="form-control" asp-items="ViewBag.ProductSizeId"></select>
-                <span asp-validation-for="ProductSize_Id" class="text-danger"></span>
+                <label asp-for="Product_ProductSize_Id" class="control-label"></label>
+                <select asp-for="Product_ProductSize_Id" class="form-control" asp-items="ViewBag.ProductSizeId"></select>
+                <span asp-validation-for="Product_ProductSize_Id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Weight" class="control-label"></label>
