Made a list of Inventory Categories and ONLY added to Lights (to test) and it worked!

--- a/MicroManager/Views/Light/Delete.cshtml
+++ b/MicroManager/Views/Light/Delete.cshtml
@@ -5,11 +5,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
+<h1>Delete Light</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Light</h4>
+   
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -42,17 +42,17 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Tax)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Total)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Total)
-        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Supplier)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Supplier.CompanyName)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.InventoryCategory)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.InventoryCategory.InventoryCategoryType)
         </dd>
     </dl>
     
