--- a/MicroManager/Views/Light/Create.cshtml
+++ b/MicroManager/Views/Light/Create.cshtml
@@ -15,7 +15,11 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Supplier_Id" class="control-label"></label>
-                <select asp-for="Supplier_Id" class="form-control" asp-items="ViewBag.SupplierId"></select>
+                <select asp-for="Supplier_Id" class ="form-control" asp-items="ViewBag.Supplier_Id"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="InventoryCategory_Id" class="control-label"></label>
+                <select asp-for="InventoryCategory_Id" class ="form-control" asp-items="ViewBag.InventoryCategory_Id"></select>
             </div>
             <div class="form-group">
                 <label asp-for="DateCreated" class="control-label"></label>
