--- a/MicroManager/Views/Light/Details.cshtml
+++ b/MicroManager/Views/Light/Details.cshtml
@@ -5,10 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<h1>Light Details</h1>
 
 <div>
-    <h4>Light</h4>
+    
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -41,17 +41,17 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Tax)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Total)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Total)
-        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Supplier)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Supplier.CompanyName)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.InventoryCategory)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.InventoryCategory.InventoryCategoryType)
         </dd>
     </dl>
 </div>
