--- a/MicroManager/Views/Light/Edit.cshtml
+++ b/MicroManager/Views/Light/Edit.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<h1>Edit Light</h1>
 
-<h4>Light</h4>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -16,8 +16,13 @@
             <input type="hidden" asp-for="LightId" />
             <div class="form-group">
                 <label asp-for="Supplier_Id" class="control-label"></label>
-                <select asp-for="Supplier_Id" class="form-control" asp-items="ViewBag.SupplierId"></select>
+                <select asp-for="Supplier_Id" class="form-control" asp-items="ViewBag.Supplier_Id"></select>
                 <span asp-validation-for="Supplier_Id" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="InventoryCategory_Id" class="control-label"></label>
+                <select asp-for="InventoryCategory_Id" class="form-control" asp-items="ViewBag.InventoryCategory_Id"></select>
+                <span asp-validation-for="InventoryCategory_Id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DateCreated" class="control-label"></label>
@@ -43,11 +48,6 @@
                 <label asp-for="Tax" class="control-label"></label>
                 <input asp-for="Tax" class="form-control" />
                 <span asp-validation-for="Tax" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Total" class="control-label"></label>
-                <input asp-for="Total" class="form-control" />
-                <span asp-validation-for="Total" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
