--- a/MicroManager/Views/Light/Index.cshtml
+++ b/MicroManager/Views/Light/Index.cshtml
@@ -32,7 +32,7 @@
                 @Html.DisplayNameFor(model => model.Supplier)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.InventoryCategory)
+                Inventory Category
             </th>
             <th></th>
         </tr>
