Added Cart/Products/Orders/OrderDetails.  It's a mess!!

--- a/MicroManager/Views/Cart/Create.cshtml
+++ b/MicroManager/Views/Cart/Create.cshtml
@@ -14,12 +14,12 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="ProductId" class="control-label"></label>
-                <select asp-for="ProductId" class ="form-control" asp-items="ViewBag.ProductId"></select>
+                <label asp-for="Product_Id" class="control-label"></label>
+                <select asp-for="Product_Id" class ="form-control" asp-items="ViewBag.Product_Id"></select>
             </div>
             <div class="form-group">
-                <label asp-for="CustomerId" class="control-label"></label>
-                <select asp-for="CustomerId" class ="form-control" asp-items="ViewBag.CustomerId"></select>
+                <label asp-for="Customer_Id" class="control-label"></label>
+                <select asp-for="Customer_Id" class ="form-control" asp-items="ViewBag.Customer_Id"></select>
             </div>
             <div class="form-group">
                 <label asp-for="DateCreated" class="control-label"></label>
