--- a/MicroManager/Views/Product/Index.cshtml
+++ b/MicroManager/Views/Product/Index.cshtml
@@ -5,16 +5,17 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Product to Sell</h1>
+<h1>Index</h1>
 
 <p>
-    <a asp-action="Create"class="btn btn-primary">Create New</a>
+    <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
         <tr>
+            
             <th>
-                @Html.DisplayNameFor(model => model.Weight)
+                @Html.DisplayNameFor(model => model.Seeds)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Price)
@@ -23,7 +24,7 @@
                 @Html.DisplayNameFor(model => model.ProductSize)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Seeds)
+                @Html.DisplayNameFor(model => model.InventoryCategory)
             </th>
             <th></th>
         </tr>
@@ -32,16 +33,17 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Weight)
+                @Html.DisplayFor(modelItem => item.Seeds.Type)
             </td>
+                
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ProductSize.Size)
+                    @Html.DisplayFor(modelItem => item.ProductSize.Size)
             </td>
             <td>
-                    @Html.DisplayFor(modelItem => item.Seeds.Type)
+                    @Html.DisplayFor(modelItem => item.InventoryCategory.InventoryCategoryType)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ProductId">Edit</a> |
