--- a/MicroManager/Views/Cart/Edit.cshtml
+++ b/MicroManager/Views/Cart/Edit.cshtml
@@ -15,14 +15,14 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="CartId" />
             <div class="form-group">
-                <label asp-for="ProductId" class="control-label"></label>
-                <select asp-for="ProductId" class="form-control" asp-items="ViewBag.ProductId"></select>
-                <span asp-validation-for="ProductId" class="text-danger"></span>
+                <label asp-for="Product_Id" class="control-label"></label>
+                <select asp-for="Product_Id" class="form-control" asp-items="ViewBag.Product_Id"></select>
+                <span asp-validation-for="Product_Id" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CustomerId" class="control-label"></label>
-                <select asp-for="CustomerId" class="form-control" asp-items="ViewBag.CustomerId"></select>
-                <span asp-validation-for="CustomerId" class="text-danger"></span>
+                <label asp-for="Customer_Id" class="control-label"></label>
+                <select asp-for="Customer_Id" class="form-control" asp-items="ViewBag.Customer_Id"></select>
+                <span asp-validation-for="Customer_Id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DateCreated" class="control-label"></label>
