--- a/MicroManager/Views/Order/Create.cshtml
+++ b/MicroManager/Views/Order/Create.cshtml
@@ -19,12 +19,8 @@
                 <span asp-validation-for="OrderDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CustomerId" class="control-label"></label>
-                <select asp-for="CustomerId" class ="form-control" asp-items="ViewBag.CustomerId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProductId" class="control-label"></label>
-                <select asp-for="ProductId" class ="form-control" asp-items="ViewBag.ProductId"></select>
+                <label asp-for="Customer_Id" class="control-label"></label>
+                <select asp-for="Customer_Id" class ="form-control" asp-items="ViewBag.Customer_Id"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
