--- a/MicroManager/Views/Order/Edit.cshtml
+++ b/MicroManager/Views/Order/Edit.cshtml
@@ -20,14 +20,9 @@
                 <span asp-validation-for="OrderDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CustomerId" class="control-label"></label>
-                <select asp-for="CustomerId" class="form-control" asp-items="ViewBag.CustomerId"></select>
-                <span asp-validation-for="CustomerId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProductId" class="control-label"></label>
-                <select asp-for="ProductId" class="form-control" asp-items="ViewBag.ProductId"></select>
-                <span asp-validation-for="ProductId" class="text-danger"></span>
+                <label asp-for="Customer_Id" class="control-label"></label>
+                <select asp-for="Customer_Id" class="form-control" asp-items="ViewBag.Customer_Id"></select>
+                <span asp-validation-for="Customer_Id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
