--- a/MicroManager/Views/OrderDetail/Create.cshtml
+++ b/MicroManager/Views/OrderDetail/Create.cshtml
@@ -14,13 +14,12 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="ProductId" class="control-label"></label>
-                <input asp-for="ProductId" class="form-control" />
-                <span asp-validation-for="ProductId" class="text-danger"></span>
+                <label asp-for="Product_Id" class="control-label"></label>
+                <select asp-for="Product_Id" class ="form-control" asp-items="ViewBag.Product_Id"></select>
             </div>
             <div class="form-group">
-                <label asp-for="OrderId" class="control-label"></label>
-                <select asp-for="OrderId" class ="form-control" asp-items="ViewBag.OrderId"></select>
+                <label asp-for="Order_Id" class="control-label"></label>
+                <select asp-for="Order_Id" class ="form-control" asp-items="ViewBag.Order_Id"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Quantity" class="control-label"></label>
