--- a/MicroManager/Views/OrderDetail/Edit.cshtml
+++ b/MicroManager/Views/OrderDetail/Edit.cshtml
@@ -15,14 +15,14 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="OrderDetailId" />
             <div class="form-group">
-                <label asp-for="ProductId" class="control-label"></label>
-                <input asp-for="ProductId" class="form-control" />
-                <span asp-validation-for="ProductId" class="text-danger"></span>
+                <label asp-for="Product_Id" class="control-label"></label>
+                <select asp-for="Product_Id" class="form-control" asp-items="ViewBag.Product_Id"></select>
+                <span asp-validation-for="Product_Id" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="OrderId" class="control-label"></label>
-                <select asp-for="OrderId" class="form-control" asp-items="ViewBag.OrderId"></select>
-                <span asp-validation-for="OrderId" class="text-danger"></span>
+                <label asp-for="Order_Id" class="control-label"></label>
+                <select asp-for="Order_Id" class="form-control" asp-items="ViewBag.Order_Id"></select>
+                <span asp-validation-for="Order_Id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Quantity" class="control-label"></label>
