--- a/MicroManager/Views/Product/Create.cshtml
+++ b/MicroManager/Views/Product/Create.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create a New Product</h1>
+<h1>Create</h1>
 
-
+<h4>Product</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,16 +15,15 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Seed_Id" class="control-label"></label>
-                <select asp-for="Seed_Id" class="form-control" asp-items="ViewBag.SeedId"></select>
+                <select asp-for="Seed_Id" class ="form-control" asp-items="ViewBag.Seed_Id"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Product_ProductSize_Id" class="control-label"></label>
-                <select asp-for="Product_ProductSize_Id" class="form-control" asp-items="ViewBag.ProductSizeId"></select>
+                <select asp-for="Product_ProductSize_Id" class ="form-control" asp-items="ViewBag.Product_ProductSize_Id"></select>
             </div>
             <div class="form-group">
-                <label asp-for="Weight" class="control-label"></label>
-                <input asp-for="Weight" class="form-control" />
-                <span asp-validation-for="Weight" class="text-danger"></span>
+                <label asp-for="InventoryCategory_Id" class="control-label"></label>
+                <select asp-for="InventoryCategory_Id" class ="form-control" asp-items="ViewBag.InventoryCategory_Id"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
