--- a/MicroManager/Views/Product/Delete.cshtml
+++ b/MicroManager/Views/Product/Delete.cshtml
@@ -13,12 +13,6 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Weight)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Weight)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Price)
         </dt>
         <dd class = "col-sm-10">
@@ -35,6 +29,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Seeds.SeedId)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.InventoryCategory)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.InventoryCategory.InventoryCategoryId)
         </dd>
     </dl>
     
